K8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: inventory-app
  labels:
    app: inventory-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-app

  template:
    metadata:
      labels:
        app: inventory-app

    spec:
      containers:
      - name: inventory-api
        image: 120966300656.dkr.ecr.ap-south-1.amazonaws.com/dev-rakshit:inventory-14
        ports:
        - containerPort: 3001


        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "300m"
            memory: "512Mi"

        livenessProbe:
            httpGet:
              path: /api/inventory/health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10  

        readinessProbe:
          httpGet:
            path: /api/inventory/health
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 10
